fixing header top borders and social network icons

--- a/index.html
+++ b/index.html
@@ -322,9 +322,9 @@
                     <div class="footer-author">
                         Built by <a href="#" class="footer__link">Modestas Rimkus</a>
                         <div class="footer__social">
-                            <a href="https://github.com/mopixels" class="footer__social-icon fab fa-github-square" target="_blank"></i></a>
-                            <a href="https://www.linkedin.com/in/modestas-rimkus-6682a780/" class="footer__social-icon fab fa-linkedin" target="_blank"></i></a>
-                            <a href="https://www.instagram.com/mo.pixels" class="footer__social-icon fab fa-instagram" target="_blank"></a>     
+                            <a href="https://github.com/mopixels" class="icon__link" target="_blank"><i class="footer__social-icon fab fa-github-square"></i></a>
+                            <a href="https://www.linkedin.com/in/modestas-rimkus-6682a780/" class="icon__link" target="_blank"><i class="footer__social-icon fab fa-linkedin"></i></a>
+                            <a href="https://www.instagram.com/mo.pixels" target="_blank"><i class="footer__social-icon fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
